syntax = "proto3";
package api;

message SaveRequest {
    string filename = 1;
    bytes data = 2;
}

message SaveResult {
    bool isOk = 1;
    string URL = 2;
}

service StoreService {
    rpc SaveFile(SaveRequest) returns (SaveResult) {}
}